<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/appbar_main"
        layout="@layout/food_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_food_list"
        style="@style/FoodCatalogue.Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/list_food_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_main" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_list_food"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_food_list" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/sl_food_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_food_list"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/food_shimmer_placeholder" />

            <include layout="@layout/food_shimmer_placeholder" />

            <include layout="@layout/food_shimmer_placeholder" />

            <include layout="@layout/food_shimmer_placeholder" />

            <include layout="@layout/food_shimmer_placeholder" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <ImageView
        android:id="@+id/iv_error_food"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_65sdp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_food_list"
        android:contentDescription="@string/image_error_text_description" />

    <TextView
        android:id="@+id/tv_error_text"
        style="@style/FoodCatalogue.Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16sdp"
        android:text="@string/error_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_error_food" />

    <TextView
        android:id="@+id/tv_retry_food_list"
        style="@style/FoodCatalogue.Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/retry_label"
        app:drawableStartCompat="@drawable/ic_resync"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_error_food_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_error_food,tv_error_text,tv_retry_food_list" />


</androidx.constraintlayout.widget.ConstraintLayout>